--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -320,7 +320,7 @@
 }
 
 .site-mobile-logout {
-  color: #71717a;
+  color: #a1a1aa;
 }
 
 .site-mobile-logout:hover {
